# smartcalc_cpp

./: .gitignore  README.md  README_RUS.md
src/: Makefile
src/controller/: controller.cc  controller.h
src/doxygen/: Doxyfile
src/model/: Makefile  calculate.cc  main.cpp  model.cc  model.h  parser.cc  reversed_polish.cc
src/tests/: test.cc  test.h
src/view/: CMakeLists.txt  mainwindow.cc  mainwindow.h  mainwindow.ui
